apps/graduation/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: graduation-frontend
spec:
  selector:
    app: graduation-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
